@@ -34,6 +34,10 @@ _______________
 
 ### Internal/compiler-libs changes:
 
+- #12896: Use quoted strings to clarify the C code being generated by the
+  bytecode linker in `-custom` and `-output-*` modes.
+  (David Allsopp and Antonin Décimo, review by ???)
+
 ### Build system:
 
 ### Bug fixes:
